   -- Fixed empty object bug reported by Vitauts Stochka <vit@dau.lv>
   -- Added unit weight/capacity patch from Ales Privetivy <ales@ucw.cz>
   -- Added patch from Jan Rietema <ravanrooke@yahoo.de> to conditionally
      prevent ships from sailing through single-hex land-masses.
   -- Fixed a bug in the cross-level teleport stuff (if allowed) which caused
      the penalty to be a flat value rather than per difference in level.
   -- Fixed a bug in teleport and such which allowed entry into and out of
      the Abyss (and viewing it via farsight and such).  Bad JT, no biscuit.
      Thanks AZ for pointing it out.

Changes from 4.0.10 -> 4.0.10a
--------------------------------------------------
   -- Fixed bug in conquest map generation caused by terrain change patch
   -- Fixed potential namespace collision on 'fill' in template.cpp

Changes from 4.0.10a -> 4.0.10b
--------------------------------------------------
   -- Fixed bug with extremely large worlds and more than 10000 units
   -- Fixed bug with small worlds/levels where a town was less than 9
      hexes from *both* poles AND LESS_ARTIC_TOWNS was enabled.  This
      caused very large negative/positive numbers for wages and such.
   -- Fixed a bug in random number generation when getrandom was called
      on a negative number (found while fixing the one above)
   -- Fixed a potential crash when evicting someone who had already
      left the building.
   -- Fixed a couple of typos in the generated rules.

Changes from 4.0.10b -> 4.0.10c
--------------------------------------------------
   -- Fixed probability of town generation bug from Jan's patch.
   -- Fixed bug in movement costs when WEATHER_EXISTS was 0.
   -- Added 'Spoils: none' line to indecisive battles to make ACB happier
   -- Fixed segfault in skill starvation code.

Changes from 4.0.10c -> 4.0.10d
--------------------------------------------------
   -- Fixed a bug where gluttony became a sin (under skill starvation).